--- a/연차보고서_1차년도수행결과_2차년도계획_초안.md
+++ b/연차보고서_1차년도수행결과_2차년도계획_초안.md
@@ -51,6 +51,10 @@
   - 1차년도 로컬 파이프라인(단일 노드)과 2차년도 목표 아키텍처를 구분하여 구성도 정리  
 - **증빙(부록 참조)**  
   - 목표 아키텍처 구성도(Agent/RAG/SaaS): **부록 B-2**  
+  - API/데이터 흐름 정의(예측·해석·대화형 설명): **부록 B-4**  
+  - RAG/Vector DB 지식 연계 설계: **부록 B-5**  
+  - (보고서 본문 삽입용 표) 핵심 API 요약: **표 1** *(부록 B-4 기반)*  
+  - (보고서 본문 삽입용 표) RAG/Vector DB 설계 요약: **표 2** *(부록 B-5 기반)*  
 - **미진행 및 보완(2차년도 이월)**  
   - 실제 UI/프로토타입, 플랫폼 API 연동, 운영 기능(권한/로그/모니터링/배포) 구현  
   - 응답시간 목표 및 운영 품질(보안 점검 포함) 검증
@@ -113,6 +117,12 @@
 - **부록 B-1**: `docs/부록-B1_시스템설계서_요약본.md`
 - **부록 B-2**: `docs/부록-B2_네트워크구성도_요약(mermaid).md`
 - **부록 B-3**: `docs/부록-B3_xAI모델정의서_요약본.md`
+- **부록 B-4**: `docs/부록-B4_API및데이터흐름_정의서.md`
+- **부록 B-5**: `docs/부록-B5_RAG-VectorDB_설계서_요약본.md`
+
+### (보고서 본문 삽입용 표)
+- **표 1**: `docs/보고서용_표-1_API요약(B-4).md`
+- **표 2**: `docs/보고서용_표-2_RAG-VectorDB요약(B-5).md`
 
 ### 부록 C(추가 증빙: 결과 파일)
 - `shap_top20_member0.csv`, `shap_top20_member0.png`
