--- a/연차보고서_1차년도수행결과_2차년도계획_초안.md
+++ b/연차보고서_1차년도수행결과_2차년도계획_초안.md
@@ -27,6 +27,10 @@
 - **증빙(부록 참조)**  
   - 시스템/파이프라인 요약: **부록 B-1**  
   - 모델 정의/성능/재현 절차: **부록 B-3**  
+  - (보고서 본문 삽입용 표) 파일럿 성능 요약: **표 3**  
+  - (보고서 본문 삽입용 표) 학습 데이터/피처 요약: **표 4**  
+  - (보고서 본문 삽입용 표) SHAP 중요도 Top-10 예시: **표 5**  
+  - (보고서 본문 삽입용 그림) SHAP 중요도 시각화: `shap_top20_member0.png` 또는 `shap_top20_member1.png`  
 - **미진행 및 보완(2차년도 이월)**  
   - 계획서 정량지표(수준진단/취약진단/해석 모델 정확도 등)와의 **지표 정의 정합화**, **평가셋 고정**  
   - **공인시험성적서(KOLAS 등) 기반 검증** 수행
@@ -123,6 +127,9 @@
 ### (보고서 본문 삽입용 표)
 - **표 1**: `docs/보고서용_표-1_API요약(B-4).md`
 - **표 2**: `docs/보고서용_표-2_RAG-VectorDB요약(B-5).md`
+- **표 3**: `docs/보고서용_표-3_xAI성능요약(파일럿).md`
+- **표 4**: `docs/보고서용_표-4_학습데이터-피처요약.md`
+- **표 5**: `docs/보고서용_표-5_SHAP중요도Top10(예시).md`
 
 ### 부록 C(추가 증빙: 결과 파일)
 - `shap_top20_member0.csv`, `shap_top20_member0.png`
