--- a/설명강화시스템_아키텍처.md
+++ b/설명강화시스템_아키텍처.md
@@ -1,6 +1,5 @@
 # 설명 강화 시스템 아키텍처 및 구성 요소 (Mermaid)
 
-아래 Mermaid 코드를 [Mermaid Live Editor](https://mermaid.live) 등에서 렌더링 후 PNG/SVG로 내보내면 발표·보고서용 그림으로 사용할 수 있습니다.
 
 ---
 
@@ -48,24 +47,24 @@ flowchart TB
     subgraph 시스템["설명 강화 시스템"]
         direction TB
 
-        subgraph M1["□ 데이터 전처리 모듈"]
-            M1a["학습 로그·문항 반응 데이터 정제"]
-            M1b["난이도, 변별도, 응답시간 등 파생 변수"]
+        subgraph M1["데이터 전처리 모듈"]
+            M1a["데이터 정제"]
+            M1b["난이도, 변별도 등 파생 변수"]
             M1c["SHAP 분석용 피처 엔지니어링"]
         end
 
-        subgraph M2["□ xAI 분석 엔진"]
-            M2a["Random Forest 등 알고리즘"]
+        subgraph M2["xAI 분석 엔진"]
+            M2a["Random Forest 알고리즘"]
             M2b["학습자 성취도 예측"]
-            M2c["SHAP 기법 → 피처별 수학적 기여도 산출"]
+            M2c["SHAP 기법 → 기여도 산출"]
         end
 
-        subgraph M3["□ 데이터 구조화 유닛 (JSON Standard)"]
+        subgraph M3["데이터 구조화 유닛 (JSON Standard)"]
             M3a["SHAP Value 수학 산출물"]
             M3b["LLM 문맥 이해용 표준화 JSON"]
         end
 
-        subgraph M4["□ 멀티 에이전트 플랫폼"]
+        subgraph M4["멀티 에이전트 플랫폼"]
             M4a["Fan-Out: 분산 처리 구조"]
             M4b["역할 분담 복수 에이전트 협업"]
             M4c["Fan-In: 출력물 종합"]
@@ -89,4 +88,3 @@ flowchart TB
 
 ---
 
-*Mermaid PNG 내보내기: VS Code Mermaid 확장 또는 https://mermaid.live 에서 코드 붙여넣기 후 Export.*
