--- a/설명강화시스템_아키텍처.md
+++ b/설명강화시스템_아키텍처.md
@@ -11,24 +11,24 @@ flowchart LR
         A[학습 로그·문항 반응 데이터]
     end
 
-    subgraph 데이터_전처리_모듈["□ 데이터 전처리 모듈"]
+    subgraph 데이터_전처리_모듈["데이터 전처리 모듈"]
         B[정제]
         C[난이도·변별도·응답시간 등 파생변수]
         D[피처 엔지니어링]
     end
 
-    subgraph xAI_분석_엔진["□ xAI 분석 엔진"]
+    subgraph xAI_분석_엔진["xAI 분석 엔진"]
         E[Random Forest 등 예측]
         F[SHAP 기법 적용]
         G[피처별 수학적 기여도 산출]
     end
 
-    subgraph 데이터_구조화["□ 데이터 구조화 유닛 (JSON Standard)"]
+    subgraph 데이터_구조화["데이터 구조화 유닛"]
         H[SHAP Value → 표준화 JSON]
         I[LLM 문맥 이해용 구조화]
     end
 
-    subgraph 멀티_에이전트["□ 멀티 에이전트 플랫폼"]
+    subgraph 멀티_에이전트["멀티 에이전트 플랫폼"]
         J[Fan-Out 분산 처리]
         K[역할 분담 복수 에이전트 협업]
         L[Fan-In 종합]
@@ -59,7 +59,7 @@ flowchart TB
             M2c["SHAP 기법 → 기여도 산출"]
         end
 
-        subgraph M3["데이터 구조화 유닛 (JSON Standard)"]
+        subgraph M3["데이터 구조화 유닛"]
             M3a["SHAP Value 수학 산출물"]
             M3b["LLM 문맥 이해용 표준화 JSON"]
         end
@@ -74,6 +74,184 @@ flowchart TB
 
     M1 --> M2 --> M3 --> M4
 ```
+
+---
+
+## 나. 멀티 에이전트 기반 협업 프로세스
+
+### 1. 진단 해석 에이전트 (Agent 1) 구조도
+
+```mermaid
+flowchart TB
+    subgraph 입력_A1["입력"]
+        IN1[데이터 구조화 유닛 출력]
+        IN1a[표준화 SHAP 중요도 JSON]
+    end
+
+    subgraph Agent1["진단 해석 에이전트 (Agent 1)"]
+        A1_1[SHAP 중요도 파싱·해석]
+        A1_2[피처별 기여도 순위화]
+        A1_3[학습자 수준 추정<br/>상·중·하 또는 연속 척도]
+        A1_4[취약 부문 식별<br/>영역·개념·문항 유형]
+        A1_5[기술적 해석문 생성<br/>수치·용어 기반 설명]
+    end
+
+    subgraph 출력_A1["출력"]
+        OUT1[수준·취약 부문 기술적 해석]
+        OUT1a[구조화된 진단 요약]
+    end
+
+    IN1 --> IN1a --> A1_1 --> A1_2 --> A1_3 --> A1_4 --> A1_5 --> OUT1 --> OUT1a
+```
+
+---
+
+### 2. 인과 분석 에이전트 (Agent 2) 구조도
+
+```mermaid
+flowchart TB
+    subgraph 입력_A2["입력"]
+        IN2[Agent 1 진단 결과]
+        IN2a[취약 부문 목록]
+        IN2b[학습 로그·행동 시퀀스]
+    end
+
+    subgraph Agent2["인과 분석 에이전트 (Agent 2)"]
+        A2_1[취약 부문 간 상관관계 분석<br/>공통 선행지식·의존관계]
+        A2_2[학습 행동 간 인과 추론<br/>시퀀스·시간·반복 패턴]
+        A2_3[근본 원인 후보 도출<br/>선행 개념 부족 등]
+        A2_4[논리적 근거 체인 구성<br/>A → B → C 인과 설명]
+        A2_5[보강용 근거문 생성]
+    end
+
+    subgraph 출력_A2["출력"]
+        OUT2[인과관계·논리적 근거]
+        OUT2a[처방 우선순위 제안]
+    end
+
+    IN2 --> IN2a
+    IN2 --> IN2b
+    IN2a --> A2_1
+    IN2b --> A2_2
+    A2_1 --> A2_3
+    A2_2 --> A2_3
+    A2_3 --> A2_4 --> A2_5 --> OUT2 --> OUT2a
+```
+
+---
+
+### 3. RAG 검색 에이전트 (Agent 3) 구조도
+
+```mermaid
+flowchart TB
+    subgraph 입력_A3["입력"]
+        IN3[진단·인과 요약 쿼리]
+        IN3a[취약 영역·키워드]
+    end
+
+    subgraph Agent3["RAG 검색 에이전트 (Agent 3)"]
+        A3_1[쿼리 임베딩 생성<br/>벡터화]
+        A3_2[Vector DB 연동<br/>유사도 검색]
+        A3_3[유사 학습 패턴 검색<br/>역사적·집단 패턴]
+        A3_4[교육학적 처방 가이드 검색<br/>교안·권장활동·문헌]
+        A3_5[검색 결과 랭킹·필터링<br/>신뢰도·관련도]
+        A3_6[참조 가능한 근거 문단 추출]
+    end
+
+    subgraph 외부["외부 저장소"]
+        VDB[(Vector DB)]
+        VDBa[임베딩 인덱스]
+        VDBb[가이드·문헌 청크]
+    end
+
+    subgraph 출력_A3["출력"]
+        OUT3[RAG 기반 근거·처방 후보]
+        OUT3a[참조 출처 포함]
+    end
+
+    IN3 --> IN3a --> A3_1 --> A3_2
+    A3_2 <--> VDB
+    VDB --> VDBa
+    VDB --> VDBb
+    A3_2 --> A3_3 --> A3_4 --> A3_5 --> A3_6 --> OUT3 --> OUT3a
+```
+
+---
+
+### 4. 결과 종합기 (Aggregator) 구조도
+
+```mermaid
+flowchart TB
+    subgraph 입력_AGG["입력 (Fan-In)"]
+        I1[Agent 1: 기술적 해석]
+        I2[Agent 2: 인과·근거]
+        I3[Agent 3: RAG 근거·처방]
+    end
+
+    subgraph Aggregator["결과 종합기 (Aggregator)"]
+        AG1[다중 소스 입력 수집]
+        AG2[일관성·중복 검사<br/>충돌 해소]
+        AG3[환각 검증<br/>근거 부재·과장 필터링]
+        AG4[우선순위·가중 통합<br/>진단 → 인과 → 처방]
+        AG5[개인화 템플릿 적용<br/>학습자 프로필 반영]
+        AG6[자연어 피드백 메시지 생성<br/>문단·불릿·요약]
+    end
+
+    subgraph 출력_AGG["출력"]
+        O_AGG[개인화된 학습 피드백]
+        O_AGGa[환각 배제·근거 명시]
+    end
+
+    I1 --> AG1
+    I2 --> AG1
+    I3 --> AG1
+    AG1 --> AG2 --> AG3 --> AG4 --> AG5 --> AG6 --> O_AGG --> O_AGGa
+```
+
+---
+
+### 5. 멀티 에이전트 협업 프로세스 전체 구조도
+
+```mermaid
+flowchart TB
+    subgraph 상류["상류 단계"]
+        JSON[데이터 구조화 유닛<br/>SHAP JSON]
+    end
+
+    subgraph FanOut["Fan-Out: 역할 분담"]
+        direction LR
+        A1["1. 진단 해석 에이전트<br/>━━━━━━━━━━<br/>• SHAP 중요도 해석<br/>• 수준·취약 부문 기술적 해석"]
+        A2["2. 인과 분석 에이전트<br/>━━━━━━━━━━<br/>• 취약 부문 상관·인과 추론<br/>• 논리적 근거 보강"]
+        A3["3. RAG 검색 에이전트<br/>━━━━━━━━━━<br/>• Vector DB 연동<br/>• 유사 패턴·처방 가이드 검색"]
+    end
+
+    subgraph FanIn["Fan-In: 종합"]
+        AGG["4. 결과 종합기 (Aggregator)<br/>━━━━━━━━━━<br/>• 다중 출력 통합<br/>• 환각 배제·일관성 검증<br/>• 개인화 피드백 메시지 생성"]
+    end
+
+    subgraph 최종["최종 산출"]
+        FB[개인화된 학습 피드백<br/>환각 배제·근거 기반]
+    end
+
+    JSON --> A1
+    JSON --> A2
+    JSON --> A3
+    A1 --> AGG
+    A2 --> AGG
+    A3 --> AGG
+    AGG --> FB
+```
+
+---
+
+### 참고: 멀티 에이전트 역할 요약
+
+| 구성 요소 | 역할 | 핵심 산출물 |
+|-----------|------|-------------|
+| **Agent 1 (진단 해석)** | 데이터 구조화 유닛의 SHAP 중요도 분석 → 학습자 수준·취약 부문 기술적 해석 | 수준 추정, 취약 영역 목록, 기술적 해석문 |
+| **Agent 2 (인과 분석)** | 취약 부문 간 상관·학습 행동 간 인과 추론 → 논리적 근거 보강 | 인과 체인, 근거문, 처방 우선순위 |
+| **Agent 3 (RAG 검색)** | Vector DB 연동, 유사 학습 패턴·교육학적 처방 가이드 검색 → 신뢰성 확보 | RAG 기반 근거·처방 후보, 참조 출처 |
+| **결과 종합기** | 에이전트 1~3 산출물 통합, 환각 배제, 개인화 피드백 메시지 생성 | 최종 자연어 피드백 |
 
 ---
 
